[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/kenney_platformerpack/PNG/Players/128x256/Blue/alienBlue_walk1.png" type="Texture" id=1]
[ext_resource path="res://scenes/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/button_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/kenney_platformerpack/PNG/Players/128x256/Pink/alienPink_walk1.png" type="Texture" id=4]
[ext_resource path="res://assets/kenney_platformerpack/PNG/Players/128x256/Yellow/alienYellow_walk1.png" type="Texture" id=5]
[ext_resource path="res://scenes/MainMenuScene.gd" type="Script" id=6]

[node name="MainMenuScene" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 981.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 465.0
margin_bottom = 440.0
custom_constants/separation = 21
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 465.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 2 )
text = "Alien!!!"

[node name="StageOneButton" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 465.0
margin_bottom = 235.0
custom_colors/font_color = Color( 0.027451, 0.462745, 0.105882, 1 )
custom_colors/font_color_hover = Color( 0.027451, 0.980392, 0.2, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Play Stage 1"
underline = 1

[node name="StageTwoButton" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 465.0
margin_bottom = 308.0
focus_mode = 2
custom_colors/font_color = Color( 0.027451, 0.462745, 0.105882, 1 )
custom_colors/font_color_hover = Color( 0.027451, 0.980392, 0.2, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Play Stage 2"
underline = 1

[node name="QuitButton" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 329.0
margin_right = 465.0
margin_bottom = 381.0
focus_mode = 2
custom_colors/font_color = Color( 0.67451, 0.121569, 0.121569, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Quit Game"
underline = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 469.0
margin_right = 597.0
margin_bottom = 440.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
margin_left = 601.0
margin_right = 729.0
margin_bottom = 440.0
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
margin_left = 733.0
margin_right = 861.0
margin_bottom = 440.0
texture = ExtResource( 4 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/StageOneButton" to="." method="_on_StageOneButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StageTwoButton" to="." method="_on_StageTwoButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
